fix: 공용 응답 및 예외 처리 보완
- 성공 응답에 응답 코드가 포함되도록 수정
- 검증 오류에서 민감한 입력값 노출 제거
- 클래스 레벨 validation 오류 처리 추가
- 잘못된 요청과 404, 405, 415 예외 처리 분리
- 예외 처리 응답 테스트 보강

Refs #2